# Astralis

./: .env  Cargo.toml  README.md
config/: log4rs.yml
src/: lib.rs  main.rs
src/api/: account.rs  binance.rs  excution.rs  mod.rs
src/models/: bollinger_bands.rs  knn.rs  mod.rs
src/plot/: mod.rs
src/trading/: markey_order.rs  mod.rs
src/types/: maperiod.rs  measurement_window.rs  mod.rs  stock_data.rs  stocki.rs  time_frame.rs
src/ui/: buttons.rs  chart.rs  infos.rs  mod.rs  trading.rs
src/utils/: constant.rs  logs.rs  mod.rs
