[package]
name = "Astralis"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version="4.5.43", features=["derive"]}
eframe = "0.32.0"
egui = "0.32.0"
egui_plot = "0.33.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.41"
fastrand = "2.3.0"